<resources>
    <string name="app_name">Cinephile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loadingMSG">loading</string>
    <string name="share_links">Sharing Movie Details</string>
    <string name="about_text">Complete Source Code and Licences Available here:</string>
    <string name="app_logo">App Logo</string>

    <string name="pref_description_enable_child_mode">Hiding adult rated movies or TV shows from lists.</string>
    <string name="pref_title_enable_child_mode">Enable child mode</string>
    <string name="pref_region">Select Region</string>
    <string name="pref_language">Select Language</string>
    <string name="no_data">NO DATA AVAILABLE</string>
    <string name="loading">Loading</string>
    <string name="tmdb_logo_attribution">TMDB Logo Attribution</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="empty">-</string>
    <string name="bookmarks_empty">NO BOOKMARKS ADDED</string>
    <string name="overview">Overview</string>
    <string name="featured_crew">Featured Crew</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="runtime">Runtime</string>
    <string name="homepage">Homepage</string>
    <string name="release_date">Release Date</string>
    <string name="genres">Genres</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="pref_description_delete">Delete all saved bookmarks, database storage and cache.</string>
    <string name="vote_avg">Vote Average</string>
    <string name="youtube_not_installed">Sorry, Can\'t Play! YouTube is not installed on this device.</string>
    <string name="pref_description_review">Rate and review the app in Google play store.</string>
    <string name="movies">Movies</string>
    <string name="get_now_playing">Get Now Playing</string>
    <string name="get_popular">Get Popular</string>
    <string name="get_top_rated">Get Top Rated</string>
    <string name="get_upcoming">Get Upcoming</string>
    <string name="bookmarked_movies">Bookmarked Movies</string>
    <string name="settings">Settings</string>
    <string name="by">by</string>
    <string name="google_play_store_error">Google Play Store is not installed.</string>
    <string name="cast_image">Cast Image</string>
    <string name="backdrop_image">Backdrop Image</string>
    <string name="poster">Poster</string>

</resources>
