<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mov_now_playing"
            android:icon="@drawable/ic_local_play_black_18dp"
            android:title="@string/get_now_playing" />

        <item
            android:id="@+id/mov_popular"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/get_popular" />

        <item
            android:id="@+id/mov_top_rated"
            android:icon="@drawable/ic_poll_black_18dp"
            android:title="@string/get_top_rated" />

        <item
            android:id="@+id/mov_upcoming"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/get_upcoming" />

        <item
            android:id="@+id/mov_bookmarks"
            android:icon="@drawable/ic_collections_bookmark_black_18dp"
            android:title="@string/bookmarked_movies" />
    </group>

    <group android:checkableBehavior="none">


        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

    </group>

</menu>
